
[TestTraefikIngressRouteConfig_PatchTraefikIngressRouteAsDesired/ok - 1]
{
 "metadata": {
  "creationTimestamp": null,
  "labels": {
   "cosmo-workspace.github.io/controller-managed": "1"
  }
 },
 "spec": {
  "entryPoints": [
   "web",
   "websecure"
  ],
  "routes": [
   {
    "kind": "Rule",
    "match": "Host(`main-ws1-xxx`)",
    "middlewares": [
     {
      "name": "userNameHeader"
     },
     {
      "name": "cosmo-auth",
      "namespace": "cosmo-system"
     }
    ],
    "priority": 100,
    "services": [
     {
      "kind": "Service",
      "name": "ws1-svc",
      "port": 8080,
      "scheme": "http"
     }
    ]
   },
   {
    "kind": "Rule",
    "match": "Host(`port8080-ws1-xxx`)",
    "priority": 100,
    "services": [
     {
      "kind": "Service",
      "name": "ws1-svc",
      "port": 8080,
      "scheme": "http"
     }
    ]
   },
   {
    "kind": "Rule",
    "match": "Host(`port8080-ws1-xxx`) \u0026\u0026 PathPrefix(`/dev`)",
    "middlewares": [
     {
      "name": "userNameHeader"
     },
     {
      "name": "cosmo-auth",
      "namespace": "cosmo-system"
     }
    ],
    "priority": 100,
    "services": [
     {
      "kind": "Service",
      "name": "ws1-svc",
      "port": 8080,
      "scheme": "http"
     }
    ]
   }
  ]
 }
}
---

[TestTraefikIngressRouteConfig_TraefikRoute/default - 1]
{
 "kind": "Rule",
 "match": "Host(`port8080-ws1-xxx`)",
 "middlewares": [
  {
   "name": "userNameHeader"
  },
  {
   "name": "cosmo-auth",
   "namespace": "cosmo-system"
  }
 ],
 "priority": 100,
 "services": [
  {
   "kind": "Service",
   "name": "ws1-backend-svc-name",
   "port": 8080,
   "scheme": "http"
  }
 ]
}
---

[TestTraefikIngressRouteConfig_TraefikRoute/no_hostname - 1]
{
 "kind": "Rule",
 "match": "Host(`port8080-ws1-xxx`) \u0026\u0026 PathPrefix(`/path`)",
 "middlewares": [
  {
   "name": "userNameHeader"
  },
  {
   "name": "cosmo-auth",
   "namespace": "cosmo-system"
  }
 ],
 "priority": 100,
 "services": [
  {
   "kind": "Service",
   "name": "ws1-backend-svc-name",
   "port": 8080,
   "scheme": "http"
  }
 ]
}
---

[TestTraefikIngressRouteConfig_TraefikRoute/public - 1]
{
 "kind": "Rule",
 "match": "Host(`port8080-ws1-xxx`) \u0026\u0026 PathPrefix(`/path`)",
 "priority": 100,
 "services": [
  {
   "kind": "Service",
   "name": "ws1-backend-svc-name",
   "port": 8080,
   "scheme": "http"
  }
 ]
}
---
